--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Authenticate"
+        android:text="@string/authenticate"
         android:id="@+id/auth_butt"
         android:onClick="authClick"
         />
